--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-mobx-routing-modal",
-  "version": "1.0.0-alpha",
+  "version": "1.0.0-beta",
   "description": "Pop-ups related to URL",
   "main": "index.js",
   "module": "index.es6.js",
@@ -45,7 +45,7 @@
     "mobx": ">=3",
     "mobx-react": ">=3",
     "react": ">=16.3",
-    "react-mobx-modal": "^1.0.0-beta",
+    "react-mobx-modal": "^1.0.0-beta1",
     "react-mobx-routing": "^1.0.16",
     "tslib": ">=2"
   }
